2008-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Fix a typo that broke the build.

2008-01-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* Makefile.am: Add -DGWEATHER_I_KNOW_THIS_IS_UNSTABLE. Fixes bug
	#509581.	
	
==================== 2.21.5 ====================

2008-01-14  Federico Mena Quintero  <federico@novell.com>

	* clock.c: Don't include langinfo.h.

2008-01-07  Federico Mena Quintero  <federico@novell.com>

	* clock.c (fill_prefs_window): Use
	gweather_prefs_get_*_display_name() instead of pulling
	translations from another module.

2008-01-03  Federico Mena Quintero  <federico@novell.com>

	* clock-location-tile.c (clock_location_tile_new): Save the signal
	connection ID of the location's "weather-updated" signal...
	(clock_location_tile_finalize): ... so we can disconnect from it
	when the location tile goes away.  This prevents us from getting
	notified after the tile is destroyed.

2008-01-03  Matthias Clasen  <mclasen@redhat.com>

	* clock-location-tile.c (weather_info_setup_tooltip): Use
	weather_info_get_icon_name() instead of the obsolete
	weather_info_get_pixbuf().
	(update_weather_icon): Likewise.

2008-01-03  Matthias Clasen  <mclasen@redhat.com>

	* clock.c (temp_unit_enum_map): Removed.
	(speed_unit_enum_map): Removed.
	(parse_and_set_temperature_string): Use the new
	gweather_prefs_parse_temperature() instead of doing things by
	hand.
	(parse_and_set_speed_string): Likewise with
	gweather_prefs_parse_speed().
	(temperature_combo_changed): Use
	gweather_prefs_temp_enum_to_string() instead of our home-grown
	function.
	(speed_combo_changed): Likewise with
	gweather_prefs_speed_enum_to_string().

2008-01-02  Federico Mena Quintero  <federico@novell.com>

	* clock.c (create_clock_window): Show the clock_vbox.

2008-01-02  Federico Mena Quintero  <federico@novell.com>

	* clock.c (format_time): Move the code from update_clock().
	(update_clock): Use format_time().
	(location_tile_need_formatted_time_cb): Implement.
